Use auth_token from keystonemiddleware
auth_token middleware in python-keystoneclient is deprecated and has
been moved to the keystonemiddleware repo.

Closes-Bug: #1342274

Change-Id: I1aadbe24db63eb2507b088cd53886d7f2e192cab

--- a/etc/heat/api-paste.ini
+++ b/etc/heat/api-paste.ini
@@ -84,7 +84,7 @@ paste.filter_factory = heat.common.auth_url:filter_factory
 
 # Auth middleware that validates token against keystone
 [filter:authtoken]
-paste.filter_factory = keystoneclient.middleware.auth_token:filter_factory
+paste.filter_factory = keystonemiddleware.auth_token:filter_factory
 
 # Auth middleware that validates username/password against keystone
 [filter:authpassword]
