--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ eventlet>=0.13.0
 greenlet>=0.3.2
 httplib2>=0.7.5
 iso8601>=0.1.9
+keystonemiddleware>=1.0.0
 kombu>=2.4.8
 lxml>=2.3
 netaddr>=0.7.6
