Fix H201 violations and re-enable gating
H201 got stricter in hacking 0.9, so fix new violations and
re-enable gating.

Change-Id: Ie79b04bc1ae2d4784318c19661584d02b7bee088
Implements: blueprint reduce-flake8-ignore-rules

--- a/tox.ini
+++ b/tox.ini
@@ -37,11 +37,10 @@ deps = -r{toxinidir}/requirements.txt
 commands = python setup.py build_sphinx
 
 [flake8]
-# H201 no 'except:' at least use 'except Exception:'
 # H302 import only modules.'bla..' does not import a module
 # H404 multi line docstring should start with a summary
 # H803 no full stop at the end of the commit message
-ignore = H201,H302,H404,H803
+ignore = H302,H404,H803
 show-source = true
 builtins = _
 exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
