Support loading constraints as stevedore extensions
This still maintains support for the existing mechanism
but moves the in tree constraints to using stevedore.

part of blueprint stevedore-plugins
Change-Id: I86907e6518281083a508f840269d79dfa3875e9a

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,14 @@ oslo.config.opts =
     heat.common.config = heat.common.config:list_opts
     heat.common.wsgi = heat.common.wsgi:list_opts
 
+heat.constraints =
+    nova.flavor = heat.engine.resources.server:FlavorConstraint
+    neutron.network = heat.engine.resources.neutron.net:NetworkConstraint
+    glance.image = heat.engine.resources.image:ImageConstraint
+    iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
+    nova.keypair = heat.engine.resources.nova_keypair:KeypairConstraint
+
+
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
