--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,12 @@ heat.constraints =
     nova.keypair = heat.engine.resources.nova_keypair:KeypairConstraint
 
 
+heat.templates =
+   heat_template_version.2013-05-23 = heat.engine.hot.template:HOTemplate
+   HeatTemplateFormatVersion.2012-12-12 = heat.engine.cfn.template:CfnTemplate
+   AWSTemplateFormatVersion.2010-09-09 = heat.engine.cfn.template:CfnTemplate
+
+
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
