Implement marconi client plugin
This moves the client creation code out of a Clients subclass into
its own client plugin.

The base package has been renamed to heat_marconi since stevedore
is used for client plugin loading and the base package will be
installed by setuptools, the package marconi might clash with
the actual marconi project.

Change-Id: Ie824d961fcfa9dafd72cc40ccf207d1c1e0501ad

--- a/contrib/heat_marconi/setup.cfg
+++ b/contrib/heat_marconi/setup.cfg
@@ -17,10 +17,13 @@ classifier =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 2.6
 
+packages =
+    heat_marconi
+
 [files]
 # Copy to /usr/lib/heat for plugin loading
 data_files =
-    lib/heat/marconi = marconi/resources/*
+    lib/heat/marconi = heat_marconi/resources/*
 
 [global]
 setup-hooks =
