Implement barbican client plugin
This moves the client creation code out of a Clients subclass into
its own client plugin.

Barbican is not an integrated project so the plugin is not registered
if barbicanclient cannot be imported.

The code which prevented client errors in _resolve_attribute from being raised
has been removed. This will prevent invalid attribute values from being
memoized.

The base package has been renamed to heat_barbican since stevedore
is used for client plugin loading and the base package will be
installed by setuptools, the package barbican might clash with
the actual Barbican project.

Change-Id: I5788fb4618fef0d1c3e39cc98094bb2813e842c5

--- a/contrib/heat_barbican/setup.cfg
+++ b/contrib/heat_barbican/setup.cfg
@@ -17,10 +17,13 @@ classifier =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 2.6
 
+packages =
+    heat_barbican
+
 [files]
 # Copy to /usr/lib/heat for plugin loading
 data_files =
-    lib/heat/barbican = barbican/resources/*
+    lib/heat/barbican = heat_barbican/resources/*
 
 [global]
 setup-hooks =
