Implement nova client plugin
This moves the client creation code out of Clients._nova() into
its own client plugin.

Raising nova exceptions has been moved to
heat.tests.v1_1.fakes.fake_exception since it is actually impossible
to directly create a nova exception object which works on both
novaclient 2.17 and (yet to be released) 2.18.
nova.exceptions.from_response is stable across novaclient releases
so all test exceptions are now raised using from_response.

Change-Id: Id68ff32c381c9c8c06f3712736d1888d1d0e8110

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,13 +37,15 @@ oslo.config.opts =
     heat.common.config = heat.common.config:list_opts
     heat.common.wsgi = heat.common.wsgi:list_opts
 
+heat.clients =
+    nova = heat.engine.clients.os.nova:NovaClientPlugin
+
 heat.constraints =
     nova.flavor = heat.engine.resources.server:FlavorConstraint
     neutron.network = heat.engine.resources.neutron.net:NetworkConstraint
     glance.image = heat.engine.resources.image:ImageConstraint
     iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
     nova.keypair = heat.engine.resources.nova_keypair:KeypairConstraint
-
 
 heat.templates =
    heat_template_version.2013-05-23 = heat.engine.hot.template:HOTemplate
