--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ heat.constraints =
 
 heat.templates =
    heat_template_version.2013-05-23 = heat.engine.hot.template:HOTemplate
+   heat_template_version.2014-10-16 = heat.engine.hot.template:HOTemplate
    HeatTemplateFormatVersion.2012-12-12 = heat.engine.cfn.template:CfnTemplate
    AWSTemplateFormatVersion.2010-09-09 = heat.engine.cfn.template:CfnTemplate
 
