--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ lxml>=2.3
 netaddr>=0.7.6
 oslo.config>=1.4.0.0a3
 oslo.db>=0.2.0  # Apache-2.0
+oslo.i18n>=0.2.0 # Apache-2.0
 oslo.messaging>=1.3.0
 PasteDeploy>=1.5.0
 pbr>=0.6,!=0.7,<1.0
