--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,10 @@ minversion = 1.6
 skipsdist = True
 
 [testenv]
+# Note the hash seed is set to 0 until heat can be tested with a
+# random hash seed successfully.
 setenv = VIRTUAL_ENV={envdir}
+         PYTHONHASHSEED=0
 usedevelop = True
 install_command = pip install {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
@@ -22,7 +25,6 @@ commands =
 commands = {posargs}
 
 [testenv:cover]
-setenv = VIRTUAL_ENV={envdir}
 commands =
   python setup.py testr --coverage --testr-args='{posargs}'
 
