Set python hash seed to 0 in tox.ini
New tox (>=1.7.0) sets a random python hash seed by default. This is
generally good for testing because it will help keep projects working
regardless of the hash seed, but heat unittests don't currently pass
with a random hash seed so set it to the python default seed.

This change will allow us to use new tox again and remove the
restriction on tox<=1.6.1 to run unittests.

Redundant setenvs for specific test envs are removed to prevent them
from overriding the PYTHONHASHSEED value.

Note this change will need to be backported to the stable branches to
keep unittests there working with new tox as well.

Conflicts:
	tox.ini

Change-Id: I2370759546adee7bf5e20fa214ed7fa1f31d6bfe
(cherry picked from commit 47e4a7e12f2287cd938c652f56e96a108d59bfd5)

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,10 @@
 envlist = py26,py27,pep8,contrib
 
 [testenv]
+# Note the hash seed is set to 0 until heat can be tested with a
+# random hash seed successfully.
 setenv = VIRTUAL_ENV={envdir}
+         PYTHONHASHSEED=0
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
@@ -26,7 +29,6 @@ commands =
 commands = {posargs}
 
 [testenv:cover]
-setenv = VIRTUAL_ENV={envdir}
 commands =
   python tools/patch_tox_venv.py
   python setup.py testr --coverage
