Add backward compatibility for notification_driver
Declare additional entry points for notification_driver option to avoid
breaking existing deployments that may use deprecated values.

Change-Id: I4f6abc33d01bb434d8ea9895aea2bfe6324049eb
Closes-Bug: #1355250

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,13 @@ heat.templates =
    HeatTemplateFormatVersion.2012-12-12 = heat.engine.cfn.template:CfnTemplate
    AWSTemplateFormatVersion.2010-09-09 = heat.engine.cfn.template:CfnTemplate
 
+# These are for backwards compat with Icehouse notification_driver configuration values
+oslo.messaging.notify.drivers =
+    heat.openstack.common.notifier.log_notifier = oslo.messaging.notify._impl_log:LogDriver
+    heat.openstack.common.notifier.no_op_notifier = oslo.messaging.notify._impl_noop:NoOpDriver
+    heat.openstack.common.notifier.rpc_notifier2 = oslo.messaging.notify._impl_messaging:MessagingV2Driver
+    heat.openstack.common.notifier.rpc_notifier = oslo.messaging.notify._impl_messaging:MessagingDriver
+    heat.openstack.common.notifier.test_notifier = oslo.messaging.notify._impl_test:TestDriver
 
 [global]
 setup-hooks =
