--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ iso8601>=0.1.9
 kombu>=2.4.8
 lxml>=2.3
 netaddr>=0.7.6
-oslo.config>=1.2.1
+oslo.config>=1.4.0.0a3
 oslo.db>=0.2.0  # Apache-2.0
 oslo.messaging>=1.3.0
 PasteDeploy>=1.5.0
