Fix marconi plugin registration
Add client plugin registration and fix packages and
files section.

Closes-Bug: 1363148
Change-Id: Ide5467bf622262d5c0deceaad2270068b8b3e3db

--- a/contrib/heat_marconi/setup.cfg
+++ b/contrib/heat_marconi/setup.cfg
@@ -17,13 +17,16 @@ classifier =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 2.6
 
+[files]
 packages =
     heat_marconi
-
-[files]
 # Copy to /usr/lib/heat for plugin loading
 data_files =
     lib/heat/marconi = heat_marconi/resources/*
+
+[entry_points]
+heat.clients =
+    marconi = heat_marconi.client:MarconiClientPlugin
 
 [global]
 setup-hooks =
