Allow to decide between Nova-network and Neutron
Adds a heat.conf option to set the OpenStack component responsible for
networking, and makes heat-engine auto-discover the networking service
on start up if such option is not set.
Also adds a convenience method to Resource class to let resources decide
what networking service to use.

Implements blueprint discover-networking-service

Change-Id: If7121089068cc2d2774bedb73e4e252b520eb5b3

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -73,6 +73,10 @@
 # Deprecated. (string value)
 #onready=<None>
 
+# Select OpenStack component responsible for networking - nova
+# or neutron. (string value)
+#networking_service=<None>
+
 
 #
 # Options defined in heat.common.config
