Implements stack lifecycle plugpoints
Stack lifecycle plugpoints have been proposed in
http://summit.openstack.org/cfp/details/86
and
https://etherpad.openstack.org/p/juno-summit-heat-callbacks

Implements: blueprint stack-lifecycle-plugpoint
Change-Id: I8c7b5d0113392e54fe0f35933c2c10da277fd90b

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,8 @@ heat.constraints =
     iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
     nova.keypair = heat.engine.resources.nova_keypair:KeypairConstraint
 
+heat.stack_lifecycle_plugins =
+
 heat.templates =
    heat_template_version.2013-05-23 = heat.engine.hot.template:HOTemplate
    heat_template_version.2014-10-16 = heat.engine.hot.template:HOTemplate
