--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,17 @@ install_command = pip install {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-  python setup.py testr --slowest --testr-args='{posargs}'
+  python setup.py testr --slowest --testr-args='^(?!functionaltests) {posargs}'
 
 whitelist_externals = bash
 
+[testenv:functional]
+commands =
+  python -c "print('TODO: functional tests')"
+
 [testenv:pep8]
 commands =
-    flake8 heat bin/heat-api bin/heat-api-cfn bin/heat-api-cloudwatch bin/heat-engine bin/heat-manage contrib
+    flake8 heat bin/heat-api bin/heat-api-cfn bin/heat-api-cloudwatch bin/heat-engine bin/heat-manage contrib functionaltests
     {toxinidir}/tools/config/check_uptodate.sh
     {toxinidir}/tools/requirements_style_check.sh requirements.txt test-requirements.txt
     # Check that .po and .pot files are valid:
