Add missing "." to help strings
Make help strings consistent, add ".".

Change-Id: I3f5267b40abfbab3fb4b90bfe72c267ba4c10943

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -384,15 +384,15 @@
 # Options defined in heat.engine.notification
 #
 
-# Default notification level for outgoing notifications
+# Default notification level for outgoing notifications.
 # (string value)
 #default_notification_level=INFO
 
-# Default publisher_id for outgoing notifications (string
+# Default publisher_id for outgoing notifications. (string
 # value)
 #default_publisher_id=<None>
 
-# List of drivers to send notifications (DEPRECATED) (multi
+# List of drivers to send notifications (DEPRECATED). (multi
 # valued)
 #list_notifier_drivers=<None>
 
