Rename docker directory to heat_docker
This directory was renamed in 4e8231, which made importing docker
(that is docker-py) difficult if not impossible in Python 2.x. So
rename it to something other than 'docker' to avoid that problem.

(setup.cfg has been modified with the new path)

Change-Id: I3cbb7c5d4b53f70e1dc6102881f8e05852341a9a
Related-bug: #1296758

--- a/contrib/heat_docker/setup.cfg
+++ b/contrib/heat_docker/setup.cfg
@@ -20,7 +20,7 @@ classifier =
 [files]
 # Copy to /usr/lib/heat for plugin loading
 data_files =
-    lib/heat/docker = docker/resources/*
+    lib/heat/docker = heat_docker/resources/*
 
 [global]
 setup-hooks =
