--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ netaddr>=0.7.6
 oslo.config>=1.4.0.0a3
 oslo.db>=0.2.0  # Apache-2.0
 oslo.i18n>=0.2.0 # Apache-2.0
-oslo.messaging>=1.3.0
+oslo.messaging>=1.4.0.0a3
 PasteDeploy>=1.5.0
 posix_ipc
 pycrypto>=2.6
