Replace marconi by zaqar in heat plugins
Change-Id: I9eb68c27e79782f0da0d9a79bf231e09f2f679bc

--- a/contrib/heat_zaqar/setup.cfg
+++ b/contrib/heat_zaqar/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = heat-contrib-marconi
-summary = Heat resources for working Marconi queues
+name = heat-contrib-zaqar
+summary = Heat resources for working Zaqar queues
 description-file =
     README.md
 author = OpenStack
@@ -19,14 +19,14 @@ classifier =
 
 [files]
 packages =
-    heat_marconi
+    heat_zaqar
 # Copy to /usr/lib/heat for plugin loading
 data_files =
-    lib/heat/marconi = heat_marconi/resources/*
+    lib/heat/zaqar = heat_zaqar/resources/*
 
 [entry_points]
 heat.clients =
-    marconi = heat_marconi.client:MarconiClientPlugin
+    zaqar = heat_zaqar.client:ZaqarClientPlugin
 
 [global]
 setup-hooks =
