--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+# The order of packages is significant, because pip processes them in the order
+# of appearance. Changing the order has an impact on the overall integration
+# process, which may cause wedges in the gate later.
+
+pbr>=0.6,!=0.7,<1.0
 argparse
 Babel>=1.3
 eventlet>=0.13.0
@@ -12,7 +17,6 @@ oslo.config>=1.4.0.0a3
 oslo.db>=0.2.0  # Apache-2.0
 oslo.messaging>=1.3.0
 PasteDeploy>=1.5.0
-pbr>=0.6,!=0.7,<1.0
 posix_ipc
 pycrypto>=2.6
 python-ceilometerclient>=1.0.6
