--- a/setup.cfg
+++ b/setup.cfg
@@ -62,9 +62,9 @@ heat.constraints =
 heat.stack_lifecycle_plugins =
 
 heat.templates =
-   heat_template_version.2013-05-23 = heat.engine.hot.template:HOTemplate
-   heat_template_version.2014-10-16 = heat.engine.hot.template:HOTemplate
-   HeatTemplateFormatVersion.2012-12-12 = heat.engine.cfn.template:CfnTemplate
+   heat_template_version.2013-05-23 = heat.engine.hot.template:HOTemplate20130523
+   heat_template_version.2014-10-16 = heat.engine.hot.template:HOTemplate20141016
+   HeatTemplateFormatVersion.2012-12-12 = heat.engine.cfn.template:HeatTemplate
    AWSTemplateFormatVersion.2010-09-09 = heat.engine.cfn.template:CfnTemplate
 
 # These are for backwards compat with Icehouse notification_driver configuration values
