--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ oslo.i18n>=1.0.0  # Apache-2.0
 oslo.messaging>=1.4.0
 oslo.serialization>=1.0.0  # Apache-2.0
 oslo.utils>=1.0.0  # Apache-2.0
+osprofiler>=0.3.0
 PasteDeploy>=1.5.0
 posix_ipc
 pycrypto>=2.6
