Add an option to disable cloud watch lite
This also adds a deprecation warning.
This also changes the default to use Ceilometer.

Release message:
Anyone deploying Heat should not be using OS::Heat::CWLiteAlarm, but
OS::Ceilometer::Alarm.
CWLiteAlarm should be explictly disabled in /etc/heat/heat.conf by
setting "enable_cloud_watch_lite=false". This will stop Heat from
running a period task check for alarms.

DocImpact
Change-Id: I2a10c14772bdafc001e211d7e94502ac1f6b32b1
Closes-bug: #1322128

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -70,6 +70,10 @@
 # stack locking. (integer value)
 #engine_life_check_timeout=2
 
+# Enable the legacy OS::Heat::CWLiteAlarm resource. (boolean
+# value)
+#enable_cloud_watch_lite=true
+
 # Deprecated. (string value)
 #onready=<None>
 
