Fix barbican plugin registration
Add client plugin registration and fix packages and files section.

Change-Id: Ie9ac19f5ab5933054c65c64c53e555d278c3229b
Closes-Bug: 1374097

--- a/contrib/heat_barbican/setup.cfg
+++ b/contrib/heat_barbican/setup.cfg
@@ -17,13 +17,17 @@ classifier =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 2.6
 
+[files]
 packages =
     heat_barbican
 
-[files]
 # Copy to /usr/lib/heat for plugin loading
 data_files =
     lib/heat/barbican = heat_barbican/resources/*
+
+[entry_points]
+heat.clients =
+    barbican = heat_barbican.client:BarbicanClientPlugin
 
 [global]
 setup-hooks =
