Disable Abandon & Adopt features by default
Change-Id: I0c1e25650a3a6cab0211fb41eb2f6a02ef7dcc9f
Closes-Bug: #1375879

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -74,6 +74,12 @@
 # value)
 #enable_cloud_watch_lite=true
 
+# Enable the preview Stack Abandon feature. (boolean value)
+#enable_stack_abandon=false
+
+# Enable the preview Stack Adopt feature. (boolean value)
+#enable_stack_adopt=false
+
 # Deprecated. (string value)
 #onready=<None>
 
