Add custom get_temp_url to RackspaceSwiftClient
Rackspace Cloud Files uses a non-OpenStack account identifier in the
URL, so the Rackspace Swift client needs its own get_temp_url method.

Change-Id: Ic90c26fca0200f1fba74d50b6aa8a75f8bcd7ef6
Closes-bug: #1378979

--- a/contrib/rackspace/setup.cfg
+++ b/contrib/rackspace/setup.cfg
@@ -36,6 +36,7 @@ heat.clients =
     glance = rackspace.clients:RackspaceGlanceClient
     nova = rackspace.clients:RackspaceNovaClient
     trove = rackspace.clients:RackspaceTroveClient
+    swift = rackspace.clients:RackspaceSwiftClient
 
 [global]
 setup-hooks =
