--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -585,7 +585,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -601,7 +601,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 [clients_cinder]
@@ -612,7 +612,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -628,7 +628,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 #
@@ -647,7 +647,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -663,7 +663,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 [clients_heat]
@@ -674,7 +674,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -690,7 +690,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 #
@@ -699,7 +699,7 @@
 
 # Optional heat url in format like
 # http://0.0.0.0:8004/v1/%(tenant_id)s. (string value)
-#url=<None>
+#url=
 
 
 [clients_keystone]
@@ -710,7 +710,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -726,7 +726,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 [clients_neutron]
@@ -737,7 +737,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -753,7 +753,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 [clients_nova]
@@ -764,7 +764,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -780,7 +780,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 #
@@ -799,7 +799,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -815,7 +815,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 [clients_trove]
@@ -826,7 +826,7 @@
 
 # Type of endpoint in Identity service catalog to use for
 # communication with the OpenStack service. (string value)
-#endpoint_type=publicURL
+#endpoint_type=<None>
 
 # Optional CA cert file to use in SSL connections. (string
 # value)
@@ -842,7 +842,7 @@
 
 # If set, then the server's certificate will not be verified.
 # (boolean value)
-#insecure=false
+#insecure=<None>
 
 
 [database]
