Inherit roles for create_trust_context()
This change the default value of the option
'trusts_delegated_roles' to []. And delegate all of
the trustor roles when create the trust unless
user set the option to subset roles.

Change-Id: I3f1b70b78b91bfac9af5fadb71140679b208c999
Closes-bug: #1376562

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -35,9 +35,10 @@
 # (string value)
 #deferred_auth_method=password
 
-# Subset of trustor roles to be delegated to heat. (list
-# value)
-#trusts_delegated_roles=heat_stack_owner
+# Subset of trustor roles to be delegated to heat. If left
+# unset, all roles of a user will be delegated to heat when
+# creating a stack. (list value)
+#trusts_delegated_roles=
 
 # Maximum resources allowed per top-level stack. (integer
 # value)
