Inherit roles for create_trust_context()
For the stable/juno backport, the default value of
trusts_delegated_roles is left unchanged, so deployers
will see no change on upgrade, unless they explicitly
choose to update their heat.conf. Note that previously
an empty list caused an error (it's invalid to
delegate zero roles via a trust), so this is not a change
of behaviour of a previously working configuration.

Change-Id: I3f1b70b78b91bfac9af5fadb71140679b208c999
Closes-bug: #1376562
(cherry picked from commit aab01c00ff330d743fc15e97d7ae144eac5015bb)

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -35,7 +35,9 @@
 # (string value)
 #deferred_auth_method=password
 
-# Subset of trustor roles to be delegated to heat. (list
+# Subset of trustor roles to be delegated to heat. If
+# trusts_delegated_roles is set to [], all roles of a user
+# will be delegated to heat when creating a stack. (list
 # value)
 #trusts_delegated_roles=heat_stack_owner
 
