Put a cap on our cyclomatic complexity
flake8 has support for cyclomatic complexity (Mccabe) currently our
worst offender has a complexity of 28 (25 is considered very bad). So
set our max-complexity to 29 so we at least don't make things any worse.

This is the first step in bringing this number down to 20 or so.

https://github.com/flintwork/mccabe

Change-Id: Ic90093ab80d9d3e27c257ea1a5cc393e09ebc7ee

--- a/tox.ini
+++ b/tox.ini
@@ -52,3 +52,6 @@ commands =
 ignore = H302,H404,H803
 show-source = true
 exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
+# 28 is currently the most complex thing we have
+# TODO(asalkeld): get this number down to 20
+max-complexity=29
