--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ commands = {posargs}
 
 [testenv:cover]
 commands =
-  python setup.py testr --coverage --testr-args='{posargs}'
+  python setup.py testr --coverage --testr-args='^(?!heat_integrationtests) {posargs}'
 
 [testenv:docs]
 deps = -r{toxinidir}/requirements.txt
