ERROR_WAIT_TIME should be a config option
As discussed at https://review.openstack.org/#/c/112941/
replace the hard-coded timeout value with a config option.

Change-Id: I49ddf254dfe6460626d90cc75f89e798227dfff6
Closes-Bug: #1385014

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -67,6 +67,10 @@
 # (integer value)
 #stack_action_timeout=3600
 
+# Error wait time in seconds for stack action (ie. create or
+# update). (integer value)
+#error_wait_time=240
+
 # RPC timeout for the engine liveness check that is used for
 # stack locking. (integer value)
 #engine_life_check_timeout=2
