Implement custom constraint for nova server
Many resources have 'InstanceId' property related
with nova server, add nova server custom constraint
to validate the existent of the server.

Change-Id: I4ee5a392488f26b2de708412d58f9c206d6f2c43
Implements: blueprint nova-custom-constraints

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ heat.constraints =
     glance.image = heat.engine.clients.os.glance:ImageConstraint
     iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
     nova.keypair = heat.engine.resources.nova_keypair:KeypairConstraint
+    nova.server = heat.engine.clients.os.nova:ServerConstraint
 
 heat.stack_lifecycle_plugins =
 
