Remove KeypairConstraint and FlavorConstraint to nova.py
All nova custom constraints should be defined in
nova.py as neutron custom constraints.
And this change also remove the corresponding tests
to test_nova_client.py

Change-Id: Ie40192b5d53d60d2d4e152801cbd8583e6c45dac
Implements: blueprint nova-custom-constraints

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,15 +49,15 @@ heat.clients =
     sahara = heat.engine.clients.os.sahara:SaharaClientPlugin
 
 heat.constraints =
-    nova.flavor = heat.engine.resources.server:FlavorConstraint
+    nova.flavor = heat.engine.clients.os.nova:FlavorConstraint
     neutron.network = heat.engine.clients.os.neutron:NetworkConstraint
     neutron.port = heat.engine.clients.os.neutron:PortConstraint
     neutron.router = heat.engine.clients.os.neutron:RouterConstraint
     neutron.subnet = heat.engine.clients.os.neutron:SubnetConstraint
     glance.image = heat.engine.clients.os.glance:ImageConstraint
     iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
-    nova.keypair = heat.engine.resources.nova_keypair:KeypairConstraint
     nova.server = heat.engine.clients.os.nova:ServerConstraint
+    nova.keypair = heat.engine.clients.os.nova:KeypairConstraint
 
 heat.stack_lifecycle_plugins =
 
