Add cinder volume custom constraint
Add cinder volume custom constraint to validate
the existent of the volume not wait creation.

Change-Id: Idf4b7139eff2532e71aff48ff4a965c9e52a0921
Implements: blueprint cinder-custom-constraints

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ heat.constraints =
     iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
     nova.server = heat.engine.clients.os.nova:ServerConstraint
     nova.keypair = heat.engine.clients.os.nova:KeypairConstraint
+    cinder.volume = heat.engine.clients.os.cinder:VolumeConstraint
 
 heat.stack_lifecycle_plugins =
 
