Add cinder snapshot custom constraint
Add cinder snapshot custom constraint to validate
the existent of the snapshot not wait creation.

Change-Id: I4140dfc212eeb4830632c8450e8c8faad3d165f6
Implements: blueprint cinder-custom-constraints

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ heat.constraints =
     nova.server = heat.engine.clients.os.nova:ServerConstraint
     nova.keypair = heat.engine.clients.os.nova:KeypairConstraint
     cinder.volume = heat.engine.clients.os.cinder:VolumeConstraint
+    cinder.snapshot = heat.engine.clients.os.cinder:VolumeSnapshotConstraint
 
 heat.stack_lifecycle_plugins =
 
