Remove ignoring [H302] in tox.ini
Change-Id: I5049d4108d3fa88fb7214034ddcd77f27bb8e84d

--- a/tox.ini
+++ b/tox.ini
@@ -46,10 +46,9 @@ commands =
   bash tools/config/generate_sample.sh -b . -p heat -o etc/heat
 
 [flake8]
-# H302 import only modules.'bla..' does not import a module
 # H404 multi line docstring should start with a summary
 # H803 no full stop at the end of the commit message
-ignore = H302,H404,H803
+ignore = H404,H803
 show-source = true
 exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
 # 28 is currently the most complex thing we have
