--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ oslo.middleware>=0.3.0                  # Apache-2.0
 oslo.serialization>=1.2.0               # Apache-2.0
 oslo.utils>=1.2.0                       # Apache-2.0
 osprofiler>=0.3.0                       # Apache-2.0
+oslo.versionedobjects>=0.1.0
 PasteDeploy>=1.5.0
 posix_ipc
 pycrypto>=2.6
