Remove run_tests.sh
This tool is deprecated in favor of tox for a long time already.
Moreover, currently it is broken as it tries to run
our in-tree integration tests as well.

So instead of fixing it, just finally remove it.

Change-Id: Icb3c4d423031456b8b24a84e97e310df077d9990

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,7 +6,7 @@ include LICENSE
 include README.rst
 include MANIFEST.in pylintrc
 include openstack-common.conf
-include babel.cfg install.sh run_tests.sh tox.ini uninstall.sh
+include babel.cfg install.sh tox.ini uninstall.sh
 include heat/cloudinit/config
 include heat/cloudinit/boothook.sh
 include heat/cloudinit/loguserdata.py
