Add cinder volume type constraint for resources
Add cinder volume type constraint for resources.

Change-Id: I2860418b8d4ee8ec076c35836d48a2c60aea7274
Notes: missed in bp/cinder-custom-constraints

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ heat.constraints =
     nova.keypair = heat.engine.clients.os.nova:KeypairConstraint
     cinder.volume = heat.engine.clients.os.cinder:VolumeConstraint
     cinder.snapshot = heat.engine.clients.os.cinder:VolumeSnapshotConstraint
+    cinder.vtype = heat.engine.clients.os.cinder:VolumeTypeConstraint
 
 heat.stack_lifecycle_plugins =
 
