Enable E122, E126 and E128 style checks
Improper indent of continued lines.

Change-Id: Iea32ef7dddb5f75681aa4992d8270391e038a1c8

--- a/tox.ini
+++ b/tox.ini
@@ -53,9 +53,6 @@ commands =
   bash tools/config/generate_sample.sh -b . -p heat -o etc/heat
 
 [flake8]
-# E122 continuation line missing indentation or outdented
-# E126 continuation line over-indented for hanging indent
-# E128 continuation line under-indented for visual indent
 # E251 unexpected spaces around keyword / parameter equals
 # E265 block comment should start with '# '
 # F402 import shadowed by loop variable
@@ -70,7 +67,7 @@ commands =
 # H405 multi line docstring summary not separated with an empty line
 # H803 no full stop at the end of the commit message
 # H904 Wrap long lines in parentheses instead of a backslash
-ignore = E122,E126,E128,E251,E265,F402,F812,H101,H202,H233,H305,H307,H402,H404,H405,H803,H904
+ignore = E251,E265,F402,F812,H101,H202,H233,H305,H307,H402,H404,H405,H803,H904
 show-source = true
 exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
 max-complexity=20
