Enable E251 style check
unexpected space around 'equals' operator

Change-Id: I8566d918a2abb8cac358832fb5af551fad9b058f

--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,6 @@ commands = python setup.py build_sphinx
 commands = oslo-config-generator --config-file=config-generator.conf
 
 [flake8]
-# E251 unexpected spaces around keyword / parameter equals
 # H202 assertRaises Exception too broad
 # H233 Python 3.x incompatible use of print operator
 # H305 imports not grouped correctly
@@ -62,7 +61,7 @@ commands = oslo-config-generator --config-file=config-generator.conf
 # H405 multi line docstring summary not separated with an empty line
 # H803 no full stop at the end of the commit message
 # H904 Wrap long lines in parentheses instead of a backslash
-ignore = E251,H202,H233,H305,H307,H402,H404,H405,H803,H904
+ignore = H202,H233,H305,H307,H402,H404,H405,H803,H904
 show-source = true
 exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
 max-complexity=20
