--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,6 @@ commands = oslo-config-generator --config-file=config-generator.conf
 
 [flake8]
 # H202 assertRaises Exception too broad
-# H233 Python 3.x incompatible use of print operator
 # H305 imports not grouped correctly
 # H307 like imports should be grouped togethe
 # H402 one line docstring needs punctuation
@@ -61,7 +60,7 @@ commands = oslo-config-generator --config-file=config-generator.conf
 # H405 multi line docstring summary not separated with an empty line
 # H803 no full stop at the end of the commit message
 # H904 Wrap long lines in parentheses instead of a backslash
-ignore = H202,H233,H305,H307,H402,H404,H405,H803,H904
+ignore = H202,H305,H307,H402,H404,H405,H803,H904
 show-source = true
 exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
 max-complexity=20
