Use oslo.config generator
Replace usage of old incubator configuration generator by the
oslo.config tool.

tools/config/generate_sample.sh has been replaced by tox -egenconfig.

heat_integrationtests/generate_sample.sh has been replaced by
oslo-config-generator
--config-file=heat_integrationtests/config-generator.conf

Change-Id: I6d95df203b556c8ec2088d40a446427f7087b9a7

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,18 @@ scripts =
 [entry_points]
 oslo.config.opts =
     heat.common.config = heat.common.config:list_opts
+    heat.common.crypt = heat.common.crypt:list_opts
+    heat.common.heat_keystoneclient = heat.common.heat_keystoneclient:list_opts
     heat.common.wsgi = heat.common.wsgi:list_opts
+    heat.engine.clients = heat.engine.clients:list_opts
+    heat.engine.notification = heat.engine.notification:list_opts
+    heat.engine.resources = heat.engine.resources:list_opts
+    heat.openstack.common.eventlet_backdoor = heat.openstack.common.eventlet_backdoor:list_opts
+    heat.openstack.common.log = heat.openstack.common.log:list_opts
+    heat.openstack.common.policy = heat.openstack.common.policy:list_opts
+    heat.api.middleware.ssl = heat.api.middleware.ssl:list_opts
+    heat.api.aws.ec2token = heat.api.aws.ec2token:list_opts
+    heat_integrationtests.common.config = heat_integrationtests.common.config:list_opts
 
 heat.clients =
     ceilometer = heat.engine.clients.os.ceilometer:CeilometerClientPlugin
