--- a/tox.ini
+++ b/tox.ini
@@ -49,8 +49,7 @@ deps = -r{toxinidir}/requirements.txt
 commands = python setup.py build_sphinx
 
 [testenv:genconfig]
-commands =
-  bash tools/config/generate_sample.sh -b . -p heat -o etc/heat
+commands = oslo-config-generator --config-file=config-generator.conf
 
 [flake8]
 # H404 multi line docstring should start with a summary
