Enable H904 style checking rule
Use parentheses instead of backslash for line continuation.

Plus, usage of escaped quotes in long strings is avoided where it makes
sense.

Change-Id: If2e78012b85a4430c6f03f65784cac2d032cf116

--- a/tox.ini
+++ b/tox.ini
@@ -55,8 +55,7 @@ commands = oslo-config-generator --config-file=config-generator.conf
 # H404 multi line docstring should start with a summary
 # H405 multi line docstring summary not separated with an empty line
 # H803 no full stop at the end of the commit message
-# H904 Wrap long lines in parentheses instead of a backslash
-ignore = H404,H405,H803,H904
+ignore = H404,H405,H803
 show-source = true
 exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
 max-complexity=20
