Fix tox for integration tests
Before providing tox with regex to run specific integration tests
was broken.

Change-Id: Ieed667073fa1ec4eb864e195860266355e6f9d1c

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ whitelist_externals =
 
 [testenv:integration]
 commands =
-  python setup.py testr --slowest --testr-args='--concurrency=1 ^heat_integrationtests{posargs}'
+  python setup.py testr --slowest --testr-args='--concurrency=1 ^heat_integrationtests.*{posargs}'
 
 [testenv:pep8]
 commands =
