--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ kombu>=2.5.0
 lxml>=2.3
 netaddr>=0.7.12
 oslo.config>=1.4.0  # Apache-2.0
+oslo.context>=0.1.0                     # Apache-2.0
 oslo.db>=1.1.0  # Apache-2.0
 oslo.i18n>=1.0.0  # Apache-2.0
 oslo.messaging>=1.4.0,!=1.5.0
