Bring over pretty_tox.sh from nova
- added full log for integration tests by default
- added env 'py27log' which allows to get log for unit-tests

Change-Id: I43ca330c82ffe100247102021fce1f00acb4d11a

--- a/tox.ini
+++ b/tox.ini
@@ -20,9 +20,14 @@ whitelist_externals =
   bash
   find
 
+[testenv:py27log]
+commands =
+  find . -type f -name "*.pyc" -delete
+  bash tools/pretty_tox.sh '{posargs}'
+
 [testenv:integration]
 commands =
-  python setup.py testr --slowest --testr-args='--concurrency=1 ^heat_integrationtests.*{posargs}'
+  bash tools/pretty_tox.sh '--concurrency=1 ^heat_integrationtests.*{posargs}'
 
 [testenv:pep8]
 commands =
