"repeat" function for HOT templates
This change adds a "repeat" function, which provides a loop control
structure that iterates over the items in a list replacing each item in
a template.

Change-Id: I4785d7f6f7ee84ddfee08789ca5fc86d54f8e23f
Implements: blueprint repeat-function

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,7 @@ heat.stack_lifecycle_plugins =
 heat.templates =
    heat_template_version.2013-05-23 = heat.engine.hot.template:HOTemplate20130523
    heat_template_version.2014-10-16 = heat.engine.hot.template:HOTemplate20141016
+   heat_template_version.2015-04-30 = heat.engine.hot.template:HOTemplate20150430
    HeatTemplateFormatVersion.2012-12-12 = heat.engine.cfn.template:HeatTemplate
    AWSTemplateFormatVersion.2010-09-09 = heat.engine.cfn.template:CfnTemplate
 
