--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,7 @@ heat.constraints =
     cinder.volume = heat.engine.clients.os.cinder:VolumeConstraint
     cinder.snapshot = heat.engine.clients.os.cinder:VolumeSnapshotConstraint
     cinder.vtype = heat.engine.clients.os.cinder:VolumeTypeConstraint
+    sahara.image = heat.engine.clients.os.sahara:ImageConstraint
 
 heat.stack_lifecycle_plugins =
 
